--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ url: "https://tombuster.github.io/"
 header_pages:
   - index.md
   - about.md
+  - gallery.md
 
 listen_for_clients_preferred_style: true # false (default) or true
 
